log/build_2023-05-07_20-44-09/locomotion_core/stderr.log
  File "/home/rsl/Desktop/Indoor_Mobile_Robotic_Arm/Thesis/ws/install/locomotion_core/lib/python3.8/site-packages/locomotion_core/rover_state_controller.py", line 13
    from ./RoverDescription import RoverDescription as Rover
          ^
SyntaxError: invalid syntax

